--- a/individual-work/pitra-2k-web-figma-1/styles/_footer.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/_footer.scss
@@ -6,7 +6,7 @@ footer {
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: end;
+    justify-content: center;
     .footer-information {
         padding: 1em 0 1em 0;
         display: flex;
