--- a/individual-work/wba-projekt-2/styles/_about.scss
+++ b/individual-work/wba-projekt-2/styles/_about.scss
@@ -5,57 +5,52 @@
     .about-section {
         margin-top: 3em;
         .about-heading-container {
-            /* @include first-heading-container; */
             display: inline-flex;
             text-align: start;
             position: relative;
-            transition-duration: 0.4s;
-            margin-bottom: 4em;
-            h1 {
+            margin-bottom: 5em;
+            /* .typeText::after {
+                content: "|";
+                animation: blink 1s infinite;
+            }
+            @keyframes blink {
+                0%,
+                100% {
+                    opacity: 1;
+                }
+                50% {
+                    opacity: 0;
+                }
+            } */
+            #heading {
+                position: relative;
                 text-transform: uppercase;
+                text-shadow: -15px 5px 20px #b7b7b8;
+                color: white;
+                font-size: 5rem;
+                letter-spacing: -0.05em;
+                font-family: customFontThree;
+                user-select: none;
+                transition: all 0.25s ease-out;
+                word-spacing: 5px;
+            }
+            #heading:hover {
+                text-shadow: -16px 6px 15px #ced0d3;
+            }
+            /* h1 { */
+            /*text-transform: uppercase;
                 padding: 1em;
                 font-family: customFontThree;
                 font-weight: bolder;
                 font-size: 4rem;
-                /* border-left: 3px solid black; */
-                /* box-shadow: -50px 0px 35px 0px #a9a9a947; */
+                 border-left: 3px solid black; 
+                /* box-shadow: -50px 0px 35px 0px #a9a9a947; 
                 margin: 11px 0 17px 0;
                 font-size: 3rem;
                 color: rgb(48, 48, 48);
                 text-shadow: 0 10px 10px #555555, 0 -2px 1px rgb(83, 83, 83);
-                word-spacing: 5px;
-            }
-            /* 
-        h1::after {
-            content: "";
-            width: 0px;
-            height: 0px;
-            position: absolute;
-            transition: 0.4s;
-        }
-        h1::before {
-            content: "";
-            width: 11px;
-            height: 11px;
-            position: absolute;
-            transition: 0.4s;
-        }
-        h1::after {
-            top: 0px;
-            left: 0px;
-            border-left: 3px solid black;
-        }
-        h1:hover::before {
-            width: 100%;
-            height: 100%;
-        }
-        h1:hover::after {
-            width: 100%;
-            height: 100%;
-        }
-        h1:hover {
-            box-shadow: -50px 0px 35px 0px #a9a9a947;
-        } */
+                */
+            /* } */
         }
         .text-container {
             display: flex;
@@ -103,7 +98,7 @@
             }
             .box-2 {
                 margin: 2em;
-                margin-top: 4em;
+                margin-top: 5em;
                 margin-bottom: 6em;
                 padding: 3em;
                 width: 55vw;
@@ -225,47 +220,6 @@
                 color: transparent;
             }
         }
-    }
-}
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-html,
-body {
-    width: 100%;
-}
-
-.container {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    background-image: url("https://images.unsplash.com/photo-1522071820081-009f0129c71c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80");
-    flex-flow: column;
-    justify-content: center;
-    align-items: center;
-}
-
-p {
-    font-size: xx-large;
-    color: white;
-}
-
-.typeText::after {
-    content: "|";
-    animation: blink 1s infinite;
-}
-
-@keyframes blink {
-    0%,
-    100% {
-        opacity: 1;
-    }
-    50% {
-        opacity: 0;
     }
 }
 
