--- a/individual-work/wba-projekt-2/styles/_homepage.scss
+++ b/individual-work/wba-projekt-2/styles/_homepage.scss
@@ -31,6 +31,7 @@
                     font-weight: bolder;
                     font-size: 5rem;
                     transition-duration: .2s;
+                    user-select: none;
                     /* box-shadow: rgba(0, 0, 0, 0.49) 0px 0px 0px 2px inset; */
                 }
                 /* h1:hover {
@@ -76,7 +77,7 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
             h2 {
                 /* text-align: center; */
                 padding: 2em 4em;
-                padding-left: 2em;
+                padding-left: 1em;
                 /* background-color: #f7f7f7; */
                 font-size: 1.6rem;
                 transition-duration: .2s;
