--- a/individual-work/wba-projekt-2/styles/_var.scss
+++ b/individual-work/wba-projekt-2/styles/_var.scss
@@ -13,6 +13,7 @@
     font-family: customFontThree;
 }
 
+$font-amatic: customFontTwo;
 $footer-color: #857f7f85;
 $form-bottom-border-color: black;
 $form-transition-dur-setting: all 0.30s ease-in-out;
