--- a/individual-work/wba-projekt-2/styles/style.css
+++ b/individual-work/wba-projekt-2/styles/style.css
@@ -392,6 +392,10 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
     font-size: 5rem;
     -webkit-transition-duration: .2s;
             transition-duration: .2s;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
     /* box-shadow: rgba(0, 0, 0, 0.49) 0px 0px 0px 2px inset; */
   }
   #index .first-section .first-section-image-container {
@@ -441,7 +445,7 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
   #index .first-section-paragraph-container h2 {
     /* text-align: center; */
     padding: 2em 4em;
-    padding-left: 2em;
+    padding-left: 1em;
     /* background-color: #f7f7f7; */
     font-size: 1.6rem;
     -webkit-transition-duration: .2s;
@@ -930,60 +934,58 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
     margin-top: 3em;
   }
   .about-section .about-heading-container {
-    /* @include first-heading-container; */
     display: -webkit-inline-box;
     display: -ms-inline-flexbox;
     display: inline-flex;
     text-align: start;
     position: relative;
-    -webkit-transition-duration: 0.4s;
-            transition-duration: 0.4s;
-    margin-bottom: 4em;
-    /* 
-        h1::after {
-            content: "";
-            width: 0px;
-            height: 0px;
-            position: absolute;
-            transition: 0.4s;
-        }
-        h1::before {
-            content: "";
-            width: 11px;
-            height: 11px;
-            position: absolute;
-            transition: 0.4s;
-        }
-        h1::after {
-            top: 0px;
-            left: 0px;
-            border-left: 3px solid black;
-        }
-        h1:hover::before {
-            width: 100%;
-            height: 100%;
-        }
-        h1:hover::after {
-            width: 100%;
-            height: 100%;
-        }
-        h1:hover {
-            box-shadow: -50px 0px 35px 0px #a9a9a947;
-        } */
+    margin-bottom: 5em;
+    /* .typeText::after {
+                content: "|";
+                animation: blink 1s infinite;
+            }
+            @keyframes blink {
+                0%,
+                100% {
+                    opacity: 1;
+                }
+                50% {
+                    opacity: 0;
+                }
+            } */
+    /* h1 { */
+    /*text-transform: uppercase;
+                padding: 1em;
+                font-family: customFontThree;
+                font-weight: bolder;
+                font-size: 4rem;
+                 border-left: 3px solid black; 
+                /* box-shadow: -50px 0px 35px 0px #a9a9a947; 
+                margin: 11px 0 17px 0;
+                font-size: 3rem;
+                color: rgb(48, 48, 48);
+                text-shadow: 0 10px 10px #555555, 0 -2px 1px rgb(83, 83, 83);
+                */
+    /* } */
   }
-  .about-section .about-heading-container h1 {
+  .about-section .about-heading-container #heading {
+    position: relative;
     text-transform: uppercase;
-    padding: 1em;
+    text-shadow: -15px 5px 20px #b7b7b8;
+    color: white;
+    font-size: 5rem;
+    letter-spacing: -0.05em;
     font-family: customFontThree;
-    font-weight: bolder;
-    font-size: 4rem;
-    /* border-left: 3px solid black; */
-    /* box-shadow: -50px 0px 35px 0px #a9a9a947; */
-    margin: 11px 0 17px 0;
-    font-size: 3rem;
-    color: #303030;
-    text-shadow: 0 10px 10px #555555, 0 -2px 1px #535353;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+    -webkit-transition: all 0.25s ease-out;
+    transition: all 0.25s ease-out;
     word-spacing: 5px;
+  }
+  .about-section .about-heading-container #heading:hover {
+    text-shadow: -16px 6px 15px #ced0d3;
   }
   .about-section .text-container {
     display: -webkit-box;
@@ -1039,7 +1041,7 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
   }
   .about-section .text-container .box-2 {
     margin: 2em;
-    margin-top: 4em;
+    margin-top: 5em;
     margin-bottom: 6em;
     padding: 3em;
     width: 55vw;
@@ -1187,68 +1189,6 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
             transition-duration: all 0.3s ease-in-out;
     border-bottom: 1px solid black;
     color: transparent;
-  }
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-html,
-body {
-  width: 100%;
-}
-
-.container {
-  width: 100%;
-  height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  background-image: url("https://images.unsplash.com/photo-1522071820081-009f0129c71c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80");
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column;
-          flex-flow: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-p {
-  font-size: xx-large;
-  color: white;
-}
-
-.typeText::after {
-  content: "|";
-  -webkit-animation: blink 1s infinite;
-          animation: blink 1s infinite;
-}
-
-@-webkit-keyframes blink {
-  0%,
-  100% {
-    opacity: 1;
-  }
-  50% {
-    opacity: 0;
-  }
-}
-
-@keyframes blink {
-  0%,
-  100% {
-    opacity: 1;
-  }
-  50% {
-    opacity: 0;
   }
 }
 
