--- a/individual-work/wba-projekt-2/styles/_header.scss
+++ b/individual-work/wba-projekt-2/styles/_header.scss
@@ -1,4 +1,4 @@
-    @media (min-width: 1600px) and (min-height: 900px) {
+@media (max-width: 1920px) and (max-height: 1080px) {
     header {
         height: 8vh;
         margin-bottom: 4em;
@@ -80,9 +80,9 @@
                         }
                     }
                     .button {
-                        .button-container {
-                            /* display: none; */
-                        }
+                        /* .button-container {
+                                 display: none;
+                            } */
                         .button-container li {
                             float: left;
                             list-style: none;
@@ -169,6 +169,7 @@
         }
     }
     /* @media (min-width: 1366) and (min-height: 768px) {}
+
                     
                     @media (min-width: 1440) and (min-height: 900px) {}
                     
@@ -184,3 +185,4 @@
                     
                                 /* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
  */
+}
