--- a/individual-work/wba-projekt-2/styles/_homepage.scss
+++ b/individual-work/wba-projekt-2/styles/_homepage.scss
@@ -1,4 +1,4 @@
-@media (min-width: 1600px) and (min-height:900px) {
+@media (max-width: 1920px) and (max-height: 1080px) {
     #index {
         margin-inline: 8em;
         .first-section {
