--- a/individual-work/wba-projekt-2/styles/style.css
+++ b/individual-work/wba-projekt-2/styles/style.css
@@ -96,7 +96,7 @@ select {
   font-family: customFontFour;
 }
 
-@media (min-width: 1600px) and (min-height: 900px) {
+@media (max-width: 1920px) and (max-height: 1080px) {
   header {
     height: 8vh;
     margin-bottom: 4em;
@@ -139,17 +139,14 @@ select {
     width: fit-content;
     text-align: center;
     background-color: transparent;
-    /* border: none; */
     font-size: 120%;
     margin-left: .7em;
   }
   header nav .navbar-main .button .button-container a {
     text-decoration: none;
     color: black;
-    /* margin-top: 5px;
-                        margin: 2px; */
   }
-  header nav .navbar-main .button .button-container a:after {
+  header nav .navbar-main .button .button-container a .button-container a:after {
     background: none repeat scroll 0 0 transparent;
     bottom: 0;
     content: "";
@@ -161,13 +158,13 @@ select {
     transition: width 0.3s ease 0s, left 0.3s ease 0s;
     width: 0;
   }
-  header nav .navbar-main .button .button-container a:hover:after {
+  header nav .navbar-main .button .button-container a .button-container a:hover:after {
     width: 100%;
     left: 0;
   }
 }
 
-@media (max-width: 414px) and (max-height: 736px) {
+@media (max-width: 1920px) and (max-height: 1080px) and (max-width: 414px) and (max-height: 736px) {
   header {
     height: 8vh;
     margin-bottom: 2vh;
@@ -193,6 +190,9 @@ select {
     display: none;
   }
   header nav .navbar-main .button {
+    /* .button-container {
+                                 display: none;
+                            } */
     /* .action {
                         position: fixed;
                         bottom: 50px;
@@ -261,9 +261,6 @@ select {
                         transform: scale(1);
                     } */
   }
-  header nav .navbar-main .button .button-container {
-    /* display: none; */
-  }
   header nav .navbar-main .button .button-container li {
     float: left;
     list-style: none;
@@ -279,7 +276,9 @@ select {
   }
 }
 
-/* @media (min-width: 1366) and (min-height: 768px) {}
+@media (max-width: 1920px) and (max-height: 1080px) {
+  /* @media (min-width: 1366) and (min-height: 768px) {}
+
                     
                     @media (min-width: 1440) and (min-height: 900px) {}
                     
@@ -295,9 +294,10 @@ select {
                     
                                 /* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
  */
+}
+
 @media (max-width: 1920px) and (max-height: 1080px) {
   .footer-main {
-    /* z-index: 800; */
     margin-inline: 20vw;
     margin-top: 10em;
     padding: 1em;
@@ -354,7 +354,7 @@ select {
   }
 }
 
-@media (min-width: 1600px) and (min-height: 900px) {
+@media (max-width: 1920px) and (max-height: 1080px) {
   #index {
     margin-inline: 8em;
   }
@@ -953,20 +953,6 @@ select {
                     opacity: 0;
                 }
             } */
-    /* h1 { */
-    /*text-transform: uppercase;
-                padding: 1em;
-                font-family: customFontThree;
-                font-weight: bolder;
-                font-size: 4rem;
-                 border-left: 3px solid black; 
-                /* box-shadow: -50px 0px 35px 0px #a9a9a947; 
-                margin: 11px 0 17px 0;
-                font-size: 3rem;
-                color: rgb(48, 48, 48);
-                text-shadow: 0 10px 10px #555555, 0 -2px 1px rgb(83, 83, 83);
-                */
-    /* } */
   }
   .about-section .about-heading-container #heading {
     position: relative;
@@ -1064,16 +1050,7 @@ select {
     margin-top: 2em;
     -webkit-box-shadow: 20px 10px 20px 2px #81818131;
             box-shadow: 20px 10px 20px 2px #81818131;
-    /* background-color: #a4a4a45f; */
     border-radius: 5px;
-    /* h2 span {
-                /* display: block; 
-                margin: 11px 0 17px 0;
-                font-size: 2.5rem;
-                color: #eaeaea;
-                text-shadow: 0 8px 20px #5555559b, 0 -2px 1px rgb(190, 190, 190);
-                word-spacing: 5px;
-            } */
   }
   .contact-section {
     margin-top: 10em;
@@ -1212,7 +1189,6 @@ select {
     font-size: 3rem;
     -webkit-transition-duration: .2s;
             transition-duration: .2s;
-    /* box-shadow: rgba(0, 0, 0, 0.49) 0px 0px 0px 2px inset; */
   }
   .about-section .about-heading-container h1 {
     padding: 1em;
@@ -1257,7 +1233,6 @@ select {
     margin-top: 4em;
   }
   .about-section .text-container .box-1 {
-    /* margin: 2em; */
     padding: 2em;
     width: -webkit-fit-content;
     width: -moz-fit-content;
@@ -1265,12 +1240,10 @@ select {
     -ms-flex-item-align: center;
         -ms-grid-row-align: center;
         align-self: center;
-    /* margin-left: 5em; */
     -webkit-box-shadow: -20px 10px 20px 2px #8988882b;
             box-shadow: -20px 10px 20px 2px #8988882b;
   }
   .about-section .text-container .box-2 {
-    /* margin: 2em; */
     padding: 2em;
     width: -webkit-fit-content;
     width: -moz-fit-content;
@@ -1278,12 +1251,10 @@ select {
     -ms-flex-item-align: center;
         -ms-grid-row-align: center;
         align-self: center;
-    /* margin-left: 5em; */
     -webkit-box-shadow: -20px 10px 20px 2px #8988882b;
             box-shadow: -20px 10px 20px 2px #8988882b;
   }
   .about-section .text-container .box-3 {
-    /* margin: 2em; */
     padding: 2em;
     width: -webkit-fit-content;
     width: -moz-fit-content;
@@ -1291,7 +1262,6 @@ select {
     -ms-flex-item-align: center;
         -ms-grid-row-align: center;
         align-self: center;
-    /* margin-left: 5em; */
     -webkit-box-shadow: -20px 10px 20px 2px #8988882b;
             box-shadow: -20px 10px 20px 2px #8988882b;
   }
@@ -1415,13 +1385,7 @@ select {
 html,
 body {
   scroll-behavior: smooth;
-  -ms-overflow-style: none;
   scrollbar-width: none;
-}
-
-html::-webkit-scrollbar,
-body::-webkit-scrollbar {
-  display: none;
 }
 
 body {
